--- a/index.html
+++ b/index.html
@@ -3,50 +3,49 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>German Ramirez Cortinas</title>
+<title>German Ramirez Cortinas - Canet Costa Rica</title>
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+
 <style>
+/* Reset */
 *{margin:0; padding:0; box-sizing:border-box;}
 body{font-family:'Playfair Display', serif; background:#f5f0eb; color:#222; overflow-x:hidden; perspective:1500px;}
 
-/* Botones flotantes */
+/* Botones flotantes WhatsApp / Llamada */
 .floating-btn{position:fixed; bottom:20px; right:20px; z-index:1000; border-radius:50%; width:60px; height:60px; display:flex; justify-content:center; align-items:center; font-size:1.5rem; color:#fff; cursor:pointer; box-shadow:0 5px 15px rgba(0,0,0,0.3);}
 .floating-whatsapp{background:#25d366; right:90px;}
 .floating-call{background:#ff4b5c;}
 
-/* Header video + partículas */
-header{position:relative; width:100%; height:100vh; display:flex; align-items:center; justify-content:center; overflow:hidden;}
-header video{position:absolute; top:0; left:0; width:100%; height:100%; object-fit:cover; z-index:-2; filter:brightness(0.7);}
-.particles{position:absolute; width:100%; height:100%; pointer-events:none; overflow:hidden; z-index:-1;}
-.particle{position:absolute; width:5px; height:5px; background:#f8e49e; border-radius:50%; opacity:0.7; animation:float 6s linear infinite;}
-@keyframes float{0%{transform:translateY(100vh) translateX(0);}100%{transform:translateY(-10vh) translateX(50px);}}
+/* Header */
+header{position:relative; width:100%; height:90px; background:#f5f0eb; display:flex; align-items:center; justify-content:space-between; padding:0 50px; box-shadow:0 2px 10px rgba(0,0,0,0.1);}
+.nav-links{display:flex; gap:30px; font-weight:700;}
+.nav-links a{color:#5c3a21; text-decoration:none; transition:color 0.3s;}
+.nav-links a:hover{color:#f8e49e;}
+.social-icons{display:flex; gap:15px;}
+.social-icons a{color:#5c3a21; font-size:1.2rem; transition:color 0.3s;}
+.social-icons a:hover{color:#f8e49e;}
 
-/* Logo y slogan 3D */
-.logo{font-size:3rem; color:#5c3a21; text-shadow:2px 2px 15px rgba(0,0,0,0.5); transform:translateZ(50px);}
-.slogan{font-size:1.5rem; color:#f8e49e; margin-top:10px; text-align:center; transform:translateZ(40px);}
+/* Hero */
+.hero{position:relative; width:100%; height:80vh; display:flex; align-items:center; justify-content:center; overflow:hidden; background:#222;}
+.hero video{position:absolute; top:0; left:0; width:100%; height:100%; object-fit:cover; z-index:-2; filter:brightness(0.6);}
+.hero .hero-content{position:relative; color:#fff; text-align:center; max-width:900px; z-index:2;}
+.hero h1{font-size:3rem; margin-bottom:20px;}
+.hero p{font-size:1.2rem; margin-bottom:30px; line-height:1.5;}
+.hero .cta-buttons{display:flex; gap:20px; justify-content:center; flex-wrap:wrap;}
+.hero .cta-buttons a{background:#f8e49e; color:#5c3a21; padding:15px 30px; border-radius:10px; text-decoration:none; font-weight:700; transition:transform 0.3s;}
+.hero .cta-buttons a:hover{transform:scale(1.05);}
 
-/* Menú categorías superior */
-nav.main-nav{position:absolute; top:30px; left:50%; transform:translateX(-50%); display:flex; gap:30px; font-weight:700; z-index:10;}
-nav.main-nav a{text-decoration:none; color:#5c3a21; transition:color 0.3s;}
-nav.main-nav a:hover{color:#f8e49e;}
-
-/* Sala 3D + cortina interactiva */
-.sala-container{position:relative; width:80%; max-width:1200px; height:60vh; margin:50px auto; border-radius:20px; overflow:hidden; transform-style:preserve-3d; box-shadow:0 20px 50px rgba(0,0,0,0.2);}
-.sala-bg{position:absolute; width:100%; height:100%; background:url('https://images.unsplash.com/photo-1588854337111-3d9b1df7e214?auto=format&fit=crop&w=1470&q=80') center/cover no-repeat; transition:transform 1s ease;}
-.cortina{position:absolute; top:0; left:0; width:100%; height:100%; background:linear-gradient(to right, #5c3a21 0%, #5c3a21 50%, transparent 50%); transform:translateX(-100%); z-index:2; transition:transform 1.5s ease; box-shadow: inset -5px 0 15px rgba(0,0,0,0.4);}
-.cortina.open{transform:translateX(0);}
-
-/* Cortinas sección */
+/* Sección Cortinas */
 .cortinas-section{padding:80px 10%; display:grid; grid-template-columns:repeat(auto-fit,minmax(350px,1fr)); gap:50px; align-items:center;}
 .cortinas-text h2{font-size:2.5rem; color:#5c3a21; margin-bottom:20px;}
 .cortinas-text p{font-size:1.1rem; line-height:1.6; margin-bottom:20px;}
-.cortinas-text .cta-buttons a{margin-right:20px; background:#f8e49e; color:#5c3a21; padding:10px 20px; border-radius:10px; text-decoration:none; font-weight:700; transition:transform 0.3s;}
-.cortinas-text .cta-buttons a:hover{transform:scale(1.05);}
-.cortinas-image img{width:100%; height:100%; object-fit:cover; border-radius:20px; transition:transform 0.5s;}
-.cortinas-image img:hover{transform:scale(1.05);}
+.cortinas-text .cta-buttons a{margin-right:20px;}
+.cortinas-image{position:relative; height:400px; border-radius:20px; overflow:hidden;}
+.cortinas-image img{width:100%; height:100%; object-fit:cover; transition:transform 1s;}
+.cortinas-image:hover img{transform:scale(1.05);}
 
-/* Tecnología */
+/* Sección Tecnología */
 .tech-section{background:#f8f8f8; padding:80px 10%; text-align:center;}
 .tech-section h2{font-size:2.5rem; color:#5c3a21; margin-bottom:30px;}
 .tech-grid{display:flex; justify-content:center; gap:50px; flex-wrap:wrap;}
@@ -56,13 +55,12 @@ nav.main-nav a:hover{color:#f8e49e;}
 .tech-item h3{margin-bottom:15px; color:#5c3a21;}
 .tech-item p{font-size:1rem; line-height:1.5;}
 
-/* Categorías con animación scroll */
-.categories{display:grid; grid-template-columns:repeat(auto-fit,minmax(250px,1fr)); gap:30px; padding:50px;}
-.category-card{position:relative; overflow:hidden; border-radius:15px; box-shadow:0 10px 30px rgba(0,0,0,0.1); cursor:pointer; transition:transform 0.5s ease, box-shadow 0.5s ease; opacity:0; transform:translateY(50px) rotateX(15deg);}
-.category-card.visible{opacity:1; transform:translateY(0) rotateX(0);}
-.category-card img{width:100%; height:200px; object-fit:cover; display:block; transition:transform 0.5s ease;}
-.category-card:hover img{transform:scale(1.1);}
-.category-card h3{position:absolute; bottom:15px; left:15px; color:#f8e49e; text-shadow:1px 1px 5px rgba(0,0,0,0.5); font-size:1.3rem;}
+/* Sala 3D + cortina Blackout */
+.sala-container{position:relative; width:80%; max-width:1200px; height:400px; margin:50px auto; border-radius:20px; overflow:hidden; transform-style:preserve-3d; box-shadow:0 20px 50px rgba(0,0,0,0.2);}
+.sala-bg{position:absolute; width:100%; height:100%; background:url('https://images.unsplash.com/photo-1588854337111-3d9b1df7e214?auto=format&fit=crop&w=1470&q=80') center/cover no-repeat; transition:transform 1s ease;}
+.cortina{position:absolute; top:0; left:0; width:100%; height:100%; background:linear-gradient(to right, #5c3a21 0%, #5c3a21 50%, transparent 50%); transform:translateX(-100%); z-index:2; transition:transform 2s ease; box-shadow: inset -5px 0 15px rgba(0,0,0,0.4);}
+.cortina.open{transform:translateX(0);}
+.cortina.closed{transform:translateX(-100%);}
 
 /* Footer */
 footer{text-align:center; padding:30px; background:#f5f0eb; color:#5c3a21;}
@@ -74,13 +72,9 @@ footer{text-align:center; padding:30px; background:#f5f0eb; color:#5c3a21;}
 <a href="https://wa.me/506XXXXXXXX" class="floating-btn floating-whatsapp"><i class="fab fa-whatsapp"></i></a>
 <a href="tel:+506XXXXXXXX" class="floating-btn floating-call"><i class="fas fa-phone"></i></a>
 
-<!-- Header con video y partículas -->
+<!-- Header -->
 <header>
-  <video autoplay muted loop>
-    <source src="video-de-fondo.mp4" type="video/mp4">
-  </video>
-  <div class="particles" id="particles"></div>
-  <nav class="main-nav">
+  <nav class="nav-links">
     <a href="#">TOLDO ZIPRO</a>
     <a href="#">PERSIANAS</a>
     <a href="#">CORTINAS</a>
@@ -90,26 +84,36 @@ footer{text-align:center; padding:30px; background:#f5f0eb; color:#5c3a21;}
     <a href="#">ALFOMBRAS</a>
     <a href="#">CONTACTO</a>
   </nav>
-  <div>
-    <div class="logo">German Ramirez Cortinas</div>
-    <div class="slogan">Elegancia y Tecnología en Cortinas</div>
+  <div class="social-icons">
+    <a href="#"><i class="fab fa-facebook-f"></i></a>
+    <a href="#"><i class="fab fa-instagram"></i></a>
+    <a href="#"><i class="fab fa-youtube"></i></a>
   </div>
 </header>
 
-<!-- Sala 3D + Cortina Blackout -->
-<section class="sala-container" id="sala">
-  <div class="sala-bg" id="sala-bg"></div>
-  <div class="cortina" id="cortina"></div>
-</section>
-
-<!-- Cortinas sección -->
-<section class="cortinas-section">
-  <div class="cortinas-text">
-    <h2>CORTINAS</h2>
-    <p>Reinventamos lo clásico: textiles premium que controlan la luz y protegen la privacidad, realzando la belleza de su hogar u oficina.</p>
+<!-- Hero -->
+<section class="hero">
+  <video autoplay muted loop>
+    <source src="video-de-fondo.mp4" type="video/mp4">
+  </video>
+  <div class="hero-content">
+    <h1>German Ramirez Cortinas</h1>
+    <p>Transforme su hogar u oficina con cortinas y persianas elegantes, automatizadas y de alta tecnología en Costa Rica.</p>
     <div class="cta-buttons">
       <a href="#">Agende su visita gratuita</a>
       <a href="#">Solicite más información</a>
+    </div>
+  </div>
+</section>
+
+<!-- Sección Cortinas -->
+<section class="cortinas-section">
+  <div class="cortinas-text">
+    <h2>CORTINAS</h2>
+    <p>Lo clásico reinventado para cualquier espacio. Cubra sus habitaciones u oficinas con textiles premium que controlan la luz, protegen su privacidad y realzan la belleza de su entorno.</p>
+    <div class="cta-buttons">
+      <a href="#">Agende su visita gratuita</a>
+      <a href="#">Conozca nuestras opciones</a>
     </div>
   </div>
   <div class="cortinas-image">
@@ -117,10 +121,10 @@ footer{text-align:center; padding:30px; background:#f5f0eb; color:#5c3a21;}
   </div>
 </section>
 
-<!-- Tecnología / AI -->
+<!-- Sección Tecnología -->
 <section class="tech-section">
   <h2>Automatización y Tecnología</h2>
-  <p>Controle cortinas, persianas y toldos con un clic o mediante sistemas inteligentes como Google Home y Alexa.</p>
+  <p>Controle cortinas, persianas y toldos con un clic o mediante sistemas inteligentes como Google Home y Alexa. Motorización avanzada para confort y privacidad absoluta.</p>
   <div class="tech-grid">
     <div class="tech-item"><i class="fas fa-mobile-alt"></i><h3>Aplicación móvil</h3><p>Controle desde su celular sin esfuerzo.</p></div>
     <div class="tech-item"><i class="fas fa-bolt"></i><h3>Sistemas inteligentes</h3><p>Compatibles con Google Home y Alexa.</p></div>
@@ -128,12 +132,10 @@ footer{text-align:center; padding:30px; background:#f5f0eb; color:#5c3a21;}
   </div>
 </section>
 
-<!-- Categorías animadas -->
-<section class="categories">
-  <div class="category-card"><img src="https://images.unsplash.com/photo-1598928506312-0c1f00b65b96?auto=format&fit=crop&w=800&q=80" alt="Baño"><h3>Baño</h3></div>
-  <div class="category-card"><img src="https://images.unsplash.com/photo-1600880292091-6e9ed32a76c0?auto=format&fit=crop&w=800&q=80" alt="Cocina"><h3>Cocina</h3></div>
-  <div class="category-card"><img src="https://images.unsplash.com/photo-1600585154340-be6161a56a0c?auto=format&fit=crop&w=800&q=80" alt="Habitación"><h3>Habitación</h3></div>
-  <div class="category-card"><img src="https://images.unsplash.com/photo-1570129477492-45c003edd2be?auto=format&fit=crop&w=800&q=80" alt="Infantil"><h3>Infantil</h3></div>
+<!-- Sala 3D + Cortina Blackout -->
+<section class="sala-container" id="sala">
+  <div class="sala-bg" id="sala-bg"></div>
+  <div class="cortina closed" id="cortina"></div>
 </section>
 
 <footer>&copy; 2025 German Ramirez Cortinas | Todos los derechos reservados</footer>
@@ -141,16 +143,6 @@ footer{text-align:center; padding:30px; background:#f5f0eb; color:#5c3a21;}
 <audio id="sound" src="cortina-bajar.mp3" preload="auto"></audio>
 
 <script>
-// Partículas
-const particlesContainer = document.getElementById('particles');
-for(let i=0;i<70;i++){
-  let p = document.createElement('div');
-  p.classList.add('particle');
-  p.style.left = Math.random()*100 + 'vw';
-  p.style.animationDuration = (3+Math.random()*5) + 's';
-  particlesContainer.appendChild(p);
-}
-
 // Cortina 3D interactiva con mouse
 const cortina = document.getElementById('cortina');
 const sound = document.getElementById('sound');
@@ -162,25 +154,24 @@ document.addEventListener('mousemove', e => {
   sala.style.transform = `rotateY(${x}deg) rotateX(${-y}deg) scale(1.05)`;
 });
 
-// Scroll cortina + sonido
-window.addEventListener('scroll', () => {
-  const trigger = window.innerHeight/2;
-  if(window.scrollY > trigger && !cortina.classList.contains('open')){
+// Botones para abrir/cerrar cortina simulando AI
+function controlCortina(action){
+  if(action==='open'){
+    cortina.classList.remove('closed');
     cortina.classList.add('open');
     sound.play();
+  } else {
+    cortina.classList.remove('open');
+    cortina.classList.add('closed');
+    sound.play();
   }
-});
+}
 
-// Scroll categorías
-const cards = document.querySelectorAll('.category-card');
-const observer = new IntersectionObserver(entries=>{
-  entries.forEach(entry=>{
-    if(entry.isIntersecting){
-      entry.target.classList.add('visible');
-    }
-  });
-},{threshold:0.3});
-cards.forEach(card=>observer.observe(card));
+// Para agregar interacción opcional
+document.querySelectorAll('.cta-buttons a').forEach(btn=>{
+  btn.addEventListener('click', ()=>controlCortina('open'));
+});
 </script>
+
 </body>
 </html>
