--- a/index.html
+++ b/index.html
@@ -3,78 +3,98 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>German Ramirez Cortinas - Canet Costa Rica</title>
+<title>Canet Cortinas Costa Rica</title>
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-
 <style>
-/* Reset */
+/* RESET */
 *{margin:0; padding:0; box-sizing:border-box;}
-body{font-family:'Playfair Display', serif; background:#f5f0eb; color:#222; overflow-x:hidden; perspective:1500px;}
+body{font-family:'Playfair Display', serif; background:#f5f0eb; color:#222; overflow-x:hidden;}
+a{text-decoration:none; color:inherit;}
+section{padding:80px 10%;}
 
-/* Botones flotantes WhatsApp / Llamada */
+/* COLORES DE TENDENCIA 2025 */
+:root{
+  --primary:#5c3a21;
+  --secondary:#f8e49e;
+  --accent:#a3d2ca;
+  --light:#f8f8f8;
+  --dark:#222;
+}
+
+/* BOTONES FLOTANTES */
 .floating-btn{position:fixed; bottom:20px; right:20px; z-index:1000; border-radius:50%; width:60px; height:60px; display:flex; justify-content:center; align-items:center; font-size:1.5rem; color:#fff; cursor:pointer; box-shadow:0 5px 15px rgba(0,0,0,0.3);}
 .floating-whatsapp{background:#25d366; right:90px;}
 .floating-call{background:#ff4b5c;}
 
-/* Header */
-header{position:relative; width:100%; height:90px; background:#f5f0eb; display:flex; align-items:center; justify-content:space-between; padding:0 50px; box-shadow:0 2px 10px rgba(0,0,0,0.1);}
-.nav-links{display:flex; gap:30px; font-weight:700;}
-.nav-links a{color:#5c3a21; text-decoration:none; transition:color 0.3s;}
-.nav-links a:hover{color:#f8e49e;}
-.social-icons{display:flex; gap:15px;}
-.social-icons a{color:#5c3a21; font-size:1.2rem; transition:color 0.3s;}
-.social-icons a:hover{color:#f8e49e;}
+/* HEADER */
+header{position:relative; width:100%; height:90vh; display:flex; flex-direction:column; align-items:center; justify-content:center; overflow:hidden;}
+header video{position:absolute; top:0; left:0; width:100%; height:100%; object-fit:cover; z-index:-2; filter:brightness(0.6);}
+.particles{position:absolute; width:100%; height:100%; pointer-events:none; overflow:hidden; z-index:-1;}
+.particle{position:absolute; width:5px; height:5px; background:var(--secondary); border-radius:50%; opacity:0.7; animation:float 6s linear infinite;}
+@keyframes float{0%{transform:translateY(100vh) translateX(0);}100%{transform:translateY(-10vh) translateX(50px);}}
 
-/* Hero */
-.hero{position:relative; width:100%; height:80vh; display:flex; align-items:center; justify-content:center; overflow:hidden; background:#222;}
-.hero video{position:absolute; top:0; left:0; width:100%; height:100%; object-fit:cover; z-index:-2; filter:brightness(0.6);}
-.hero .hero-content{position:relative; color:#fff; text-align:center; max-width:900px; z-index:2;}
-.hero h1{font-size:3rem; margin-bottom:20px;}
-.hero p{font-size:1.2rem; margin-bottom:30px; line-height:1.5;}
-.hero .cta-buttons{display:flex; gap:20px; justify-content:center; flex-wrap:wrap;}
-.hero .cta-buttons a{background:#f8e49e; color:#5c3a21; padding:15px 30px; border-radius:10px; text-decoration:none; font-weight:700; transition:transform 0.3s;}
-.hero .cta-buttons a:hover{transform:scale(1.05);}
+/* LOGO Y MENU */
+header .logo{font-size:3rem; color:var(--primary); text-shadow:2px 2px 15px rgba(0,0,0,0.5);}
+header .logo span{color:var(--secondary);}
+nav.main-nav{margin-top:20px; display:flex; gap:20px; flex-wrap:wrap; justify-content:center; z-index:10;}
+nav.main-nav a{padding:10px 15px; font-weight:700; border-radius:10px; transition:0.3s; color:var(--light);}
+nav.main-nav a:hover{background:var(--secondary); color:var(--primary);}
 
-/* Sección Cortinas */
-.cortinas-section{padding:80px 10%; display:grid; grid-template-columns:repeat(auto-fit,minmax(350px,1fr)); gap:50px; align-items:center;}
-.cortinas-text h2{font-size:2.5rem; color:#5c3a21; margin-bottom:20px;}
-.cortinas-text p{font-size:1.1rem; line-height:1.6; margin-bottom:20px;}
-.cortinas-text .cta-buttons a{margin-right:20px;}
-.cortinas-image{position:relative; height:400px; border-radius:20px; overflow:hidden;}
-.cortinas-image img{width:100%; height:100%; object-fit:cover; transition:transform 1s;}
-.cortinas-image:hover img{transform:scale(1.05);}
+/* SALA 3D + CORTINA */
+.sala-container{position:relative; width:80%; max-width:1200px; height:60vh; margin:50px auto; border-radius:20px; overflow:hidden; transform-style:preserve-3d; box-shadow:0 20px 50px rgba(0,0,0,0.2);}
+.sala-bg{position:absolute; width:100%; height:100%; background:url('https://images.unsplash.com/photo-1588854337111-3d9b1df7e214?auto=format&fit=crop&w=1470&q=80') center/cover no-repeat; transition:transform 1s ease;}
+.cortina{position:absolute; top:0; left:0; width:100%; height:100%; background:linear-gradient(to right, var(--primary) 0%, var(--primary) 50%, transparent 50%); transform:translateX(-100%); z-index:2; transition:transform 1.5s ease; box-shadow: inset -5px 0 15px rgba(0,0,0,0.4);}
+.cortina.open{transform:translateX(0);}
 
-/* Sección Tecnología */
-.tech-section{background:#f8f8f8; padding:80px 10%; text-align:center;}
-.tech-section h2{font-size:2.5rem; color:#5c3a21; margin-bottom:30px;}
+/* SECCIONES CORTINAS */
+.cortinas-section{display:grid; grid-template-columns:repeat(auto-fit,minmax(350px,1fr)); gap:50px; align-items:center;}
+.cortinas-section h2{font-size:2.5rem; color:var(--primary); margin-bottom:20px;}
+.cortinas-section p{font-size:1.1rem; line-height:1.6; margin-bottom:20px;}
+.cta-buttons a{margin-right:20px; background:var(--secondary); color:var(--primary); padding:12px 25px; border-radius:12px; font-weight:700; transition:transform 0.3s;}
+.cta-buttons a:hover{transform:scale(1.05);}
+.cortinas-image img{width:100%; height:100%; object-fit:cover; border-radius:20px; transition:transform 0.5s;}
+.cortinas-image img:hover{transform:scale(1.05);}
+
+/* TECH / AI */
+.tech-section{background:var(--light); text-align:center; padding:80px 10%;}
+.tech-section h2{font-size:2.5rem; color:var(--primary); margin-bottom:30px;}
 .tech-grid{display:flex; justify-content:center; gap:50px; flex-wrap:wrap;}
 .tech-item{flex:1 1 250px; background:#fff; border-radius:15px; padding:30px; box-shadow:0 10px 30px rgba(0,0,0,0.1); transition:transform 0.3s;}
 .tech-item:hover{transform:translateY(-10px);}
-.tech-item i{font-size:2.5rem; color:#f8e49e; margin-bottom:15px;}
-.tech-item h3{margin-bottom:15px; color:#5c3a21;}
+.tech-item i{font-size:2.5rem; color:var(--secondary); margin-bottom:15px;}
+.tech-item h3{margin-bottom:15px; color:var(--primary);}
 .tech-item p{font-size:1rem; line-height:1.5;}
 
-/* Sala 3D + cortina Blackout */
-.sala-container{position:relative; width:80%; max-width:1200px; height:400px; margin:50px auto; border-radius:20px; overflow:hidden; transform-style:preserve-3d; box-shadow:0 20px 50px rgba(0,0,0,0.2);}
-.sala-bg{position:absolute; width:100%; height:100%; background:url('https://images.unsplash.com/photo-1588854337111-3d9b1df7e214?auto=format&fit=crop&w=1470&q=80') center/cover no-repeat; transition:transform 1s ease;}
-.cortina{position:absolute; top:0; left:0; width:100%; height:100%; background:linear-gradient(to right, #5c3a21 0%, #5c3a21 50%, transparent 50%); transform:translateX(-100%); z-index:2; transition:transform 2s ease; box-shadow: inset -5px 0 15px rgba(0,0,0,0.4);}
-.cortina.open{transform:translateX(0);}
-.cortina.closed{transform:translateX(-100%);}
+/* CARDS */
+.category-card{position:relative; overflow:hidden; border-radius:15px; box-shadow:0 10px 30px rgba(0,0,0,0.1); cursor:pointer; transition:transform 0.5s ease, box-shadow 0.5s ease; opacity:0; transform:translateY(50px) rotateX(15deg);}
+.category-card.visible{opacity:1; transform:translateY(0) rotateX(0);}
+.category-card img{width:100%; height:200px; object-fit:cover; display:block; transition:transform 0.5s ease;}
+.category-card:hover img{transform:scale(1.1);}
+.category-card h3{position:absolute; bottom:15px; left:15px; color:var(--secondary); text-shadow:1px 1px 5px rgba(0,0,0,0.5); font-size:1.3rem;}
 
-/* Footer */
-footer{text-align:center; padding:30px; background:#f5f0eb; color:#5c3a21;}
+/* FOOTER */
+footer{background:var(--primary); color:var(--light); padding:50px 10%; display:grid; grid-template-columns:repeat(auto-fit,minmax(250px,1fr)); gap:30px;}
+footer h4{margin-bottom:15px;}
+footer a{color:var(--light);}
+footer .socials a{margin-right:15px; font-size:1.5rem;}
 </style>
 </head>
 <body>
 
-<!-- Botones flotantes -->
+<!-- BOTONES FLOTANTES -->
 <a href="https://wa.me/506XXXXXXXX" class="floating-btn floating-whatsapp"><i class="fab fa-whatsapp"></i></a>
 <a href="tel:+506XXXXXXXX" class="floating-btn floating-call"><i class="fas fa-phone"></i></a>
 
-<!-- Header -->
+<!-- HEADER -->
 <header>
-  <nav class="nav-links">
+  <video autoplay muted loop>
+    <source src="video-de-fondo.mp4" type="video/mp4">
+  </video>
+  <div class="particles" id="particles"></div>
+  <div class="logo">Canet <span>Cortinas</span></div>
+  <nav class="main-nav">
+    <a href="#">NUEVO</a>
     <a href="#">TOLDO ZIPRO</a>
     <a href="#">PERSIANAS</a>
     <a href="#">CORTINAS</a>
@@ -84,36 +104,22 @@ footer{text-align:center; padding:30px; background:#f5f0eb; color:#5c3a21;}
     <a href="#">ALFOMBRAS</a>
     <a href="#">CONTACTO</a>
   </nav>
-  <div class="social-icons">
-    <a href="#"><i class="fab fa-facebook-f"></i></a>
-    <a href="#"><i class="fab fa-instagram"></i></a>
-    <a href="#"><i class="fab fa-youtube"></i></a>
-  </div>
 </header>
 
-<!-- Hero -->
-<section class="hero">
-  <video autoplay muted loop>
-    <source src="video-de-fondo.mp4" type="video/mp4">
-  </video>
-  <div class="hero-content">
-    <h1>German Ramirez Cortinas</h1>
-    <p>Transforme su hogar u oficina con cortinas y persianas elegantes, automatizadas y de alta tecnología en Costa Rica.</p>
-    <div class="cta-buttons">
-      <a href="#">Agende su visita gratuita</a>
-      <a href="#">Solicite más información</a>
-    </div>
-  </div>
+<!-- SALA 3D + CORTINA BLACKOUT -->
+<section class="sala-container" id="sala">
+  <div class="sala-bg" id="sala-bg"></div>
+  <div class="cortina" id="cortina"></div>
 </section>
 
-<!-- Sección Cortinas -->
+<!-- SECCIÓN CORTINAS -->
 <section class="cortinas-section">
   <div class="cortinas-text">
     <h2>CORTINAS</h2>
-    <p>Lo clásico reinventado para cualquier espacio. Cubra sus habitaciones u oficinas con textiles premium que controlan la luz, protegen su privacidad y realzan la belleza de su entorno.</p>
+    <p>Lo clásico siempre está de moda. Los textiles de Canet realzan la belleza de su hogar u oficina, controlando la luz según cada necesidad.</p>
     <div class="cta-buttons">
-      <a href="#">Agende su visita gratuita</a>
-      <a href="#">Conozca nuestras opciones</a>
+      <a href="#">HOGAR</a>
+      <a href="#">COMERCIAL</a>
     </div>
   </div>
   <div class="cortinas-image">
@@ -121,10 +127,48 @@ footer{text-align:center; padding:30px; background:#f5f0eb; color:#5c3a21;}
   </div>
 </section>
 
-<!-- Sección Tecnología -->
+<!-- BLACKOUT -->
+<section class="cortinas-section">
+  <div class="cortinas-text">
+    <h2>CORTINAS BLACKOUT</h2>
+    <p>El medio día parece media noche con Canet. Control total de la luz y privacidad.</p>
+    <div class="cta-buttons">
+      <a href="#">Ver texturas</a>
+      <a href="#">Solicite su visita gratuita</a>
+    </div>
+    <ul>
+      <li><i class="fas fa-ruler-combined"></i> Medidas personalizadas</li>
+      <li><i class="fas fa-tv"></i> Automatización opcional</li>
+    </ul>
+  </div>
+  <div class="cortinas-image">
+    <img src="https://images.unsplash.com/photo-1600880292091-6e9ed32a76c0?auto=format&fit=crop&w=800&q=80" alt="Blackout">
+  </div>
+</section>
+
+<!-- Tergal -->
+<section class="cortinas-section">
+  <div class="cortinas-text">
+    <h2>VELOS Y TERGALES</h2>
+    <p>Decore con estilo minimalista. Fácil limpieza y automatización opcional.</p>
+    <div class="cta-buttons">
+      <a href="#">Ver texturas</a>
+      <a href="#">Solicite su visita gratuita</a>
+    </div>
+    <ul>
+      <li><i class="fas fa-ruler-combined"></i> Medidas personalizadas</li>
+      <li><i class="fas fa-tv"></i> Automatización opcional</li>
+    </ul>
+  </div>
+  <div class="cortinas-image">
+    <img src="https://images.unsplash.com/photo-1598928506312-0c1f00b65b96?auto=format&fit=crop&w=800&q=80" alt="Tergal">
+  </div>
+</section>
+
+<!-- AUTOMATIZACIÓN / AI -->
 <section class="tech-section">
-  <h2>Automatización y Tecnología</h2>
-  <p>Controle cortinas, persianas y toldos con un clic o mediante sistemas inteligentes como Google Home y Alexa. Motorización avanzada para confort y privacidad absoluta.</p>
+  <h2>AUTOMATIZACIÓN DE CORTINAS Y PERSIANAS CANET EN COSTA RICA</h2>
+  <p>Controle cortinas, persianas, arrollables y toldos con un clic o comandos de voz. Compatible con Google Home y Alexa.</p>
   <div class="tech-grid">
     <div class="tech-item"><i class="fas fa-mobile-alt"></i><h3>Aplicación móvil</h3><p>Controle desde su celular sin esfuerzo.</p></div>
     <div class="tech-item"><i class="fas fa-bolt"></i><h3>Sistemas inteligentes</h3><p>Compatibles con Google Home y Alexa.</p></div>
@@ -132,18 +176,48 @@ footer{text-align:center; padding:30px; background:#f5f0eb; color:#5c3a21;}
   </div>
 </section>
 
-<!-- Sala 3D + Cortina Blackout -->
-<section class="sala-container" id="sala">
-  <div class="sala-bg" id="sala-bg"></div>
-  <div class="cortina closed" id="cortina"></div>
+<!-- CATEGORÍAS -->
+<section class="categories">
+  <div class="category-card"><img src="https://images.unsplash.com/photo-1600585154340-be6161a56a0c?auto=format&fit=crop&w=800&q=80" alt="Hogar"><h3>Hogar</h3></div>
+  <div class="category-card"><img src="https://images.unsplash.com/photo-1600880292091-6e9ed32a76c0?auto=format&fit=crop&w=800&q=80" alt="Comercial"><h3>Comercial</h3></div>
 </section>
 
-<footer>&copy; 2025 German Ramirez Cortinas | Todos los derechos reservados</footer>
+<!-- FOOTER -->
+<footer>
+  <div>
+    <h4>UBICACIÓN</h4>
+    <p>San José, Costa Rica</p>
+  </div>
+  <div>
+    <h4>COTIZACIONES</h4>
+    <p>Solicite su presupuesto gratuito</p>
+  </div>
+  <div>
+    <h4>CONTACTO</h4>
+    <p>Escríbanos por WhatsApp o correo</p>
+  </div>
+  <div class="socials">
+    <h4>Nuestras marcas</h4>
+    <a href="#"><i class="fab fa-facebook"></i></a>
+    <a href="#"><i class="fab fa-instagram"></i></a>
+    <a href="#"><i class="fab fa-pinterest"></i></a>
+  </div>
+</footer>
 
 <audio id="sound" src="cortina-bajar.mp3" preload="auto"></audio>
 
 <script>
-// Cortina 3D interactiva con mouse
+// Partículas header
+const particlesContainer = document.getElementById('particles');
+for(let i=0;i<70;i++){
+  let p = document.createElement('div');
+  p.classList.add('particle');
+  p.style.left = Math.random()*100 + 'vw';
+  p.style.animationDuration = (3+Math.random()*5) + 's';
+  particlesContainer.appendChild(p);
+}
+
+// Cortina 3D interactiva
 const cortina = document.getElementById('cortina');
 const sound = document.getElementById('sound');
 const sala = document.getElementById('sala-bg');
@@ -154,24 +228,25 @@ document.addEventListener('mousemove', e => {
   sala.style.transform = `rotateY(${x}deg) rotateX(${-y}deg) scale(1.05)`;
 });
 
-// Botones para abrir/cerrar cortina simulando AI
-function controlCortina(action){
-  if(action==='open'){
-    cortina.classList.remove('closed');
+// Scroll cortina + sonido
+window.addEventListener('scroll', () => {
+  const trigger = window.innerHeight/2;
+  if(window.scrollY > trigger && !cortina.classList.contains('open')){
     cortina.classList.add('open');
     sound.play();
-  } else {
-    cortina.classList.remove('open');
-    cortina.classList.add('closed');
-    sound.play();
   }
-}
-
-// Para agregar interacción opcional
-document.querySelectorAll('.cta-buttons a').forEach(btn=>{
-  btn.addEventListener('click', ()=>controlCortina('open'));
 });
-</script>
 
+// Scroll animación categorías
+const cards = document.querySelectorAll('.category-card');
+const observer = new IntersectionObserver(entries=>{
+  entries.forEach(entry=>{
+    if(entry.isIntersecting){
+      entry.target.classList.add('visible');
+    }
+  });
+},{threshold:0.3});
+cards.forEach(card=>observer.observe(card));
+</script>
 </body>
 </html>
