--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Canet Cortinas Costa Rica</title>
+<title>German Ramirez Cortinas</title>
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 <style>
@@ -92,7 +92,7 @@ footer .socials a{margin-right:15px; font-size:1.5rem;}
     <source src="video-de-fondo.mp4" type="video/mp4">
   </video>
   <div class="particles" id="particles"></div>
-  <div class="logo">Canet <span>Cortinas</span></div>
+  <div class="logo">German Ramirez <span>Cortinas</span></div>
   <nav class="main-nav">
     <a href="#">NUEVO</a>
     <a href="#">TOLDO ZIPRO</a>
@@ -116,7 +116,7 @@ footer .socials a{margin-right:15px; font-size:1.5rem;}
 <section class="cortinas-section">
   <div class="cortinas-text">
     <h2>CORTINAS</h2>
-    <p>Lo clásico siempre está de moda. Los textiles de Canet realzan la belleza de su hogar u oficina, controlando la luz según cada necesidad.</p>
+    <p>Lo clásico siempre está de moda. Los textiles de German Ramirez Cortinas realzan la belleza de su hogar u oficina, controlando la luz según cada necesidad.</p>
     <div class="cta-buttons">
       <a href="#">HOGAR</a>
       <a href="#">COMERCIAL</a>
@@ -131,7 +131,7 @@ footer .socials a{margin-right:15px; font-size:1.5rem;}
 <section class="cortinas-section">
   <div class="cortinas-text">
     <h2>CORTINAS BLACKOUT</h2>
-    <p>El medio día parece media noche con Canet. Control total de la luz y privacidad.</p>
+    <p>El medio día parece media noche con German Ramirez Cortinas. Control total de la luz y privacidad.</p>
     <div class="cta-buttons">
       <a href="#">Ver texturas</a>
       <a href="#">Solicite su visita gratuita</a>
@@ -167,7 +167,7 @@ footer .socials a{margin-right:15px; font-size:1.5rem;}
 
 <!-- AUTOMATIZACIÓN / AI -->
 <section class="tech-section">
-  <h2>AUTOMATIZACIÓN DE CORTINAS Y PERSIANAS CANET EN COSTA RICA</h2>
+  <h2>AUTOMATIZACIÓN DE CORTINAS Y PERSIANAS GERMAN RAMIREZ CORTINAS</h2>
   <p>Controle cortinas, persianas, arrollables y toldos con un clic o comandos de voz. Compatible con Google Home y Alexa.</p>
   <div class="tech-grid">
     <div class="tech-item"><i class="fas fa-mobile-alt"></i><h3>Aplicación móvil</h3><p>Controle desde su celular sin esfuerzo.</p></div>
