--- a/index.html
+++ b/index.html
@@ -18,10 +18,22 @@
     <a href="tel:+506XXXXXXXX" class="floating-btn floating-call" aria-label="Llámanos por teléfono"><i class="fas fa-phone"></i></a>
 
     <header>
-        <video autoplay muted loop playsinline poster="video-poster.jpg" id="bgVideo">
-            <source src="Video_Realista_Listo.mp4" type="video/mp4">
-            Tu navegador no soporta el video.
-        </video>
+        <video autoplay muted loop>
+    <source src="video-de-fondo.mp4" type="video/mp4">
+  </video>
+  <div class="particles" id="particles"></div>
+  <div class="logo">German Ramirez <span>Cortinas</span></div>
+  <nav class="main-nav">
+    <a href="#">NUEVO</a>
+    <a href="#">TOLDO ZIPRO</a>
+    <a href="#">PERSIANAS</a>
+    <a href="#">CORTINAS</a>
+    <a href="#">EXTERIORES</a>
+    <a href="#">PÉRGOLAS ZEN</a>
+    <a href="#">TOLDOS</a>
+    <a href="#">ALFOMBRAS</a>
+    <a href="#">CONTACTO</a>
+  </nav>
         <div class="particles" id="particles"></div>
         <div class="content-wrapper">
             <div class="logo">German Ramirez <span>Cortinas</span></div>
