--- a/index.html
+++ b/index.html
@@ -14,6 +14,18 @@
 </head>
 <body>
 
+    <nav class="main-nav">
+    <a href="#">NUEVO</a>
+    <a href="#">TOLDO ZIPRO</a>
+    <a href="#">PERSIANAS</a>
+    <a href="#">CORTINAS</a>
+    <a href="#">EXTERIORES</a>
+    <a href="#">PÉRGOLAS ZEN</a>
+    <a href="#">TOLDOS</a>
+    <a href="#">ALFOMBRAS</a>
+    <a href="#">CONTACTO</a>
+  </nav>
+
     <a href="https://wa.me/506XXXXXXXX" class="floating-btn floating-whatsapp" aria-label="Escríbenos por WhatsApp"><i class="fab fa-whatsapp"></i></a>
     <a href="tel:+506XXXXXXXX" class="floating-btn floating-call" aria-label="Llámanos por teléfono"><i class="fas fa-phone"></i></a>
 
