--- a/index.html
+++ b/index.html
@@ -15,16 +15,24 @@
 <body>
 
     <nav class="main-nav">
-    <a href="#">NUEVO</a>
-    <a href="#">TOLDO ZIPRO</a>
-    <a href="#">PERSIANAS</a>
-    <a href="#">CORTINAS</a>
-    <a href="#">EXTERIORES</a>
-    <a href="#">PÉRGOLAS ZEN</a>
-    <a href="#">TOLDOS</a>
-    <a href="#">ALFOMBRAS</a>
-    <a href="#">CONTACTO</a>
-  </nav>
+  <div class="menu-toggle" id="menu-toggle">
+    <span></span>
+    <span></span>
+    <span></span>
+  </div>
+  
+  <ul class="nav-menu" id="nav-menu">
+    <li><a href="#">NUEVO</a></li>
+    <li><a href="#">TOLDO ZIPRO</a></li>
+    <li><a href="#">PERSIANAS</a></li>
+    <li><a href="#">CORTINAS</a></li>
+    <li><a href="#">EXTERIORES</a></li>
+    <li><a href="#">PÉRGOLAS ZEN</a></li>
+    <li><a href="#">TOLDOS</a></li>
+    <li><a href="#">ALFOMBRAS</a></li>
+    <li><a href="#">CONTACTO</a></li>
+  </ul>
+</nav>
 
     <a href="https://wa.me/506XXXXXXXX" class="floating-btn floating-whatsapp" aria-label="Escríbenos por WhatsApp"><i class="fab fa-whatsapp"></i></a>
     <a href="tel:+506XXXXXXXX" class="floating-btn floating-call" aria-label="Llámanos por teléfono"><i class="fas fa-phone"></i></a>
