--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
   </div>
 </nav>
 
-    <a href="https://wa.me/506XXXXXXXX" class="floating-btn floating-whatsapp" aria-label="Escríbenos por WhatsApp"><i class="fab fa-whatsapp"></i></a>
-    <a href="tel:+506XXXXXXXX" class="floating-btn floating-call" aria-label="Llámanos por teléfono"><i class="fas fa-phone"></i></a>
+    <a href="https://wa.me/50663473333" class="floating-btn floating-whatsapp" aria-label="Escríbenos por WhatsApp"><i class="fab fa-whatsapp"></i></a>
+    <a href="tel:+50663473333" class="floating-btn floating-call" aria-label="Llámanos por teléfono"><i class="fas fa-phone"></i></a>
 
     <header>
         
@@ -64,7 +64,7 @@
             <h2 class="section-title">Nuestros Productos</h2>
             <div class="product-grid">
                 <article class="product-item">
-                    <img src="https://images.unsplash.com/photo-1600585154340-be6161a56a0c?auto=format&fit=crop&w=800&q=80" alt="Cortinas de tela" loading="lazy">
+                    <img src="cortinas_costa_rica.jpg" alt="Cortinas_costa_rica" loading="lazy">
                     <div class="product-info">
                         <h3>Cortinas</h3>
                         <p>Los textiles de alta calidad realzan la belleza de cualquier espacio, controlando la luz y ofreciendo elegancia.</p>
@@ -72,7 +72,7 @@
                     </div>
                 </article>
                 <article class="product-item">
-                    <img src="https://images.unsplash.com/photo-1600880292091-6e9ed32a76c0?auto=format&fit=crop&w=800&q=80" alt="Cortinas Blackout" loading="lazy">
+                    <img src="cortinas_blackout.png" alt="Cortinas_Blackout" loading="lazy">
                     <div class="product-info">
                         <h3>Blackout</h3>
                         <p>Total control de la luz y máxima privacidad, ideal para dormitorios y salas de proyección.</p>
@@ -80,7 +80,7 @@
                     </div>
                 </article>
                 <article class="product-item">
-                    <img src="https://images.unsplash.com/photo-1600585154340-be6161a56a0c?auto=format&fit=crop&w=800&q=80" alt="Persianas" loading="lazy">
+                    <img src="cortinas_persianas.png" alt="Persianas" loading="lazy">
                     <div class="product-info">
                         <h3>Persianas</h3>
                         <p>La opción perfecta para un control preciso de la luz. Estilo, funcionalidad y modernidad.</p>
